--- a/src/app/application/trend-analysis/trend-analysis.component.less
+++ b/src/app/application/trend-analysis/trend-analysis.component.less
@@ -50,15 +50,17 @@ g.line-chart > g:last-of-type > g:nth-child(1) g.line-series > path {
 }
 .riskPadding{
     padding: 0px !important;
+    text-align: center;;
 }
 .chartPaddingRight{
-    padding-right: 200px;
+    padding-right: 120px !important;
 }
 .issuesChartPadding{
     padding-left: 15px;
 }
 .issuesPadding{
     padding-top: 30px;
+    text-align: center;
 }
 .service-selection{
   cursor: pointer;
