--- a/src/app/charts/line-chart/line-chart.component.less
+++ b/src/app/charts/line-chart/line-chart.component.less
@@ -8,9 +8,28 @@
       background: rgba(255, 255, 255, 0.05) !important;
     }
 }
-.toolTip{
-  padding: 5px;
-p{
-  padding: 2px;
+.seriesToolTip{
+  padding: 10px 5px;
+.font16{
+  font-size: 16px;
+  font-weight: bold;
 }
+}
+.toolTip{
+  padding: 10px 5px;
+}
+.eachtoolTip{
+  padding: 3px;
+  text-align: left;
+.canaryId{
+  font-size: 14px;
+  font-weight: bold;
+  padding-bottom: 15px;
+  text-align: center;
+}
+.font12{
+  font-size: 12px;
+  padding: 0px;
+}
+
 }
