--- a/src/app/application/trend-analysis/trend-analysis.component.html
+++ b/src/app/application/trend-analysis/trend-analysis.component.html
@@ -44,7 +44,7 @@
         <div class="page-content flex-grow-1 colored2">
             <div class="page_title page_title_inner title_icon px-3 d-flex align-items-center">
                 <!-- {{control.value}} » -->
-                <h3><img src="../../../assets/images/application-icon.png" alt="" />{{selectedApplicationName}} » {{serviceNameInfo['serviceName'] !== undefined ? serviceNameInfo['serviceName']: ''}}</h3>
+                <h3><img src="../../../assets/images/application-icon.png" alt="" />{{selectedApplicationName}} </h3>
                 <!-- /.page_access ml-auto -->
             </div>
             <!-- /.page_title d-flex -->
@@ -66,24 +66,17 @@
                             </div> -->
                             <div class="mb-2 text-center d-flex flex-column">
                                 <div class="pl-3 pr-3 pt-4 d-flex flex-column" id="ngxLineChart" #setChartSize> 
-                                    <h5 class="riskPadding">Risk Score</h5>
+                                    <h5 class="riskPadding chartPaddingRight">Risk Score</h5>
                                     <p> </p>
-                                    <app-line-chart *ngIf="riskScoreDisplay" [view]="view" [chartProperty]="riskChartProperty" [dataSource]="createRiskChartData"  ></app-line-chart>
-                                    <!-- <ngx-charts-line-chart *ngIf="riskScoreDisplay" [view]="view"  [animations]="animations"  [scheme]="IssuesLogsScheme" [results]="createRiskChartData" [legend]="showLegend" [legendTitle]="legendTitle" [showXAxisLabel]="showXAxisLabel" [xAxis]="showXAxis" [showYAxisLabel]="showYAxisLabel" [yAxis]="showYAxis" [xAxisLabel]="riskxAxisLabel"  [yAxisLabel]="riskyAxisLabel" [timeline]="timeline" [trimXAxisTicks]="trimXAxisTicks" #chart>
-                                    </ngx-charts-line-chart>  -->
-                                    <div *ngIf="!riskScoreDisplay">
-                                        No data to display Risk Score!
+                                    <app-line-chart class="risk" *ngIf="riskScoreDisplay" [view]="view" [chartProperty]="riskChartProperty" [dataSource]="createRiskChartData"  [TrendAnalysisFlag]="TrendAnalysisFlag"  ></app-line-chart>
+                                    <div class=" chartPaddingRight" *ngIf="!riskScoreDisplay">
+                                        No data to display!
                                     </div>
-                                    <p> </p>
-                                    <h5 class="issuesPadding">Issues - Logs - {{serviceNameInfo['serviceName'] !== undefined ? serviceNameInfo['serviceName']: ''}}</h5>
+                                    <h5 class="issuesPadding chartPaddingRight">Issues - Logs - {{serviceNameInfo['serviceName'] !== undefined ? serviceNameInfo['serviceName']: 'No Services'}} </h5>
                                     <p> </p>
                                     <app-stacked-area-chart *ngIf="issuesLogsDisplay" [view]="view" [chartProperty]="issuesChartProperty" [dataSource]="createIssuesLogChartData" class="issuesChartPadding"  ></app-stacked-area-chart>
-
-                                    <!-- <ngx-charts-area-chart-stacked *ngIf="issuesLogsDisplay" [view]="view" [animations]="animations" [scheme]="colorScheme"
-                                        [results]="createIssuesLogChartData" [legend]="showLegend" [legendTitle]="legendTitle"  [showXAxisLabel]="showXAxisLabel"  [xAxis]="showXAxis" [showYAxisLabel]="showYAxisLabel" [yAxis]="showYAxis" [xAxisLabel]="issuesxAxisLabel" [yAxisLabel]="issuesyAxisLabel" [gradient]="gradient" [timeline]="timeline" [trimXAxisTicks]="trimXAxisTicks">
-                                    </ngx-charts-area-chart-stacked> -->
-                                    <div *ngIf="!issuesLogsDisplay">
-                                        No data to display Issues - Logs!
+                                    <div class=" chartPaddingRight" *ngIf="!issuesLogsDisplay">
+                                        No data to display!
                                     </div>
                                 </div>
                             </div>
