--- a/src/app/charts/line-chart/line-chart.component.html
+++ b/src/app/charts/line-chart/line-chart.component.html
@@ -21,9 +21,30 @@
   [legendPosition]="legendPosition"
   [animations]="animations"
   [autoScale]="autoScale"
+  [tooltipDisabled] = "false"
   (select)="onSelect($event)"
   (activate)="onActivate($event)"
   (deactivate)="onDeactivate($event)"
   style="fill: #999999; color: black;">
+
+  <div *ngIf="TrendAnalysisFlag">
+  <ng-template #tooltipTemplate let-model="model">
+    <div class="seriesToolTip">
+      <div class="font16"> {{model.series}} | {{model.value}}</div>
+      <div>{{model.name}}</div>
+    </div>
+  </ng-template>
+
+  <ng-template #seriesTooltipTemplate let-model="model">
+    <!-- fields are series/name/value --> 
+    <div class="toolTip">
+      <div class="eachtoolTip" *ngFor="let data of model" style="color: white">
+            <div *ngIf="data.extra.canaryId != undefined" class="canaryId"> Canary Id: {{data.extra.canaryId}} </div>
+            <div class="font12"> <i class="fa fa-square" aria-hidden="true" [style.color]="data.color"></i> &nbsp; {{data.series}} | {{data.value}}</div>
+      </div>
+    </div>
+  </ng-template>
+  </div>
+
 </ngx-charts-line-chart>
 </div>
