--- a/src/app/application/deployment-verification/deployment-verification.component.html
+++ b/src/app/application/deployment-verification/deployment-verification.component.html
@@ -570,7 +570,7 @@
                       </ul>
                 </div>
                   <div class="nav-item ml-auto padding0 col-sm-1">
-                    <button class="pull-right adjustwidth" data-toggle="tooltip" data-placement="left" title="Overall canary run inforamtion for the selected application"  id="sideButton" mat-button>
+                    <button class="pull-right adjustwidth" data-toggle="tooltip" data-placement="left" title="Overall canary run information for the selected application"  id="sideButton" mat-button>
                       <div *ngIf="isShow" (click)="[sideNav.toggle(),getOverallInfo()]"><i  class="fa fa-chevron-right"></i><i  class="fa fa-chevron-right"></i></div>
                       <div *ngIf="!isShow" (click)="[sideNav.toggle(),getOverallInfo()]"><i  class="fa fa-chevron-left"></i><i  class="fa fa-chevron-left"></i></div>
                     </button>
