--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -19,7 +19,7 @@
         {{username}}
       </button>
       <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuButton">
-        <a class="dropdown-item" >{{versionDetails['default']['versionString']}}</a>
+        <span class="dropdown-item" >{{versionDetails['default']['versionString']}}</span>
         <a class="dropdown-item" (click)="onLogout()">Logout</a>
       </div>
     </div>
