--- a/src/app/charts/line-chart/line-chart.component.html
+++ b/src/app/charts/line-chart/line-chart.component.html
@@ -9,6 +9,7 @@
   [view]="view"
   [scheme]="colorScheme"
   [legend]="showLegend"
+  [legendTitle]="legendTitle"
   [showXAxisLabel]="showXAxisLabel"
   [showYAxisLabel]="showYAxisLabel"
   [xAxis]="showXAxis"
