--- a/src/styles.less
+++ b/src/styles.less
@@ -993,6 +993,10 @@ li {
 	.modal-dialog{
 		max-width: 600px;
 	}
+	.modalWidthExtraWidth
+	{
+		max-width: 1500px !important;
+	}
 }
 .modal-header .close{
 	font-size: 1.4em;
